# Android

./: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle  todo
.github/workflows/: build-deploy-stage.yml
app/: build.gradle
app/key/: Key
app/src/androidTest/java/com/example/tusa_android/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/jupiter/tusa/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/jupiter/tusaandroid/: ExampleInstrumentedTest.java
app/src/debug/res/drawable/: avatar_test_1_background.xml
app/src/debug/res/mipmap-anydpi-v26/: avatar_test_1_round.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: plain.frag  plain.vert
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  tusa-jpeg.cpp
app/src/main/cpp/csscolorparser/: csscolorparser.cpp
app/src/main/cpp/include/: triangle.h  tusa-jpeg.h
app/src/main/cpp/include/csscolorparser/: csscolorparser.h
app/src/main/cpp/include/libexif/: _stdint.h  exif-content.h  exif-data.h  exif-entry.h  exif-log.h  exif-mem.h  exif-mnote-data.h  exif-tag.h  exif-utils.h
app/src/main/cpp/include/map/: map.h
app/src/main/cpp/include/renderer/: renderer.h
app/src/main/cpp/include/shader/: plain_shader.h  shader.h  shaders_bucket.h
app/src/main/cpp/include/util/: frustrums.h  matrices.h  timer.h
app/src/main/cpp/map/: map.cpp
app/src/main/cpp/renderer/: renderer.cpp
app/src/main/cpp/shader/: plain_shader.cpp  shader.cpp  shaders_bucket.cpp
app/src/main/cpp/util/: constants.cpp  frustrums.cpp  matrices.cpp  timer.cpp  variant.cpp
app/src/main/java/com/example/tusa_android/: AppLaunchedFragment.kt  LoginFragment.kt  MainActivity.kt  RegistrationFragment.kt
app/src/main/java/com/jupiter/tusa/data/: Result.java  (+2 more)
app/src/main/proto/: tusa.proto
app/src/main/res/anim/: common_animation.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
app/src/main/res/drawable/: circular_image.xml  ic_baseline_lens_blur_24.xml  ic_baseline_people_24.xml  marker_background.xml  rounded_button.xml
app/src/main/res/layout/: activity_main.xml  fragment_all_peoples_bottom_modal.xml  fragment_app_launched.xml  fragment_check_avatar.xml  fragment_check_jwt_token.xml  fragment_login.xml  fragment_main.xml  fragment_map.xml  fragment_my_profile_bottom_modal.xml  fragment_person_chat_with_user_bottom_modal.xml  fragment_person_chats_bottom_modal.xml  fragment_registration.xml  fragment_scan_friend_code_bottom_modal.xml  fragment_settings_bottom_modal.xml  fragment_show_friend_qr_code_bottom_modal.xml  fragment_test_bottom_modal.xml  sample_chat_row_view.xml  sample_debug_markers_draw_view.xml  sample_marker_triangle_view.xml  sample_message_row_view.xml  sample_my_view.xml  sample_people_row_view.xml  sample_tusa_image_view.xml  sample_upload_progress_view.xml  sample_user_marker_view.xml  test_annotation_view.xml
app/src/main/res/navigation/: app_navigation.xml
app/src/main/res/raw/: basic_vertex_shader.glsl  fragment_shader.glsl  shader.glsl  test_vertex.vert  testmap.mvt  vertex_shader.glsl
app/src/main/res/values/: attrs.xml  attrs_chat_row_view.xml  attrs_debug_markers_draw_view.xml  attrs_marker_triangle_view.xml  attrs_message_row_view.xml  attrs_people_row_view.xml  attrs_user_marker_view.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: styles.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+204 files in other folders)
